fixed some overflowing

--- a/src/pages/Location/Location.css
+++ b/src/pages/Location/Location.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;400;500;700&display=swap");
 
 .main-location {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .country-container,
